# ha

./: CMakeLists.txt  README.md  README.orig  acoder.c  archive.c  asc.c  cpy.c  error.c  ha.c  haio.c  hsc.c  info.c  machine.c  misc.c  swdict.c
include/: acoder.h  archive.h  asc.h  cpy.h  error.h  ha.h  haio.h  hsc.h  machine.h  swdict.h
